<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cccccc">
    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f8f8ff" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/imageCancel" android:layout_marginTop="8dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/eventfull" android:id="@+id/imageEvent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="110dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/star_big_off"
                android:id="@+id/imageCountdown"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="110dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/event"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/imageEvent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="90dp"/>
        <TextView
                android:text="@string/countdown"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:id="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/imageCountdown" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="94dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f8f8ff" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraint1">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/title"
                android:ems="10"
                android:id="@+id/titleText" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/titleText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/dateText"/>
        <TextView
                android:text="@string/repetition"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/textView5" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/todo"
                android:onClick="changeSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateText" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/titleText" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f8f8ff" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/constraint2" android:layout_marginTop="8dp">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/localization"
                android:ems="10"
                android:id="@+id/localizationText" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:inputType="textPersonName"
                android:hint="@string/description"
                android:ems="10"
                android:id="@+id/descriptionText" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/localizationText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint2c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f8f8ff" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraint1">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/title"
                android:ems="10"
                android:id="@+id/titleText1c" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView1c"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/titleText1c" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <Spinner
                android:id="@+id/spinner2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner1c"/>
        <TextView
                android:text="@string/repetition"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/textView51c"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView21c"/>
        <TextView
                android:text="@string/todo"
                android:onClick="changeSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateText1c" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/titleText1c" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="Przypomnienie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21c"
                app:layout_constraintTop_toBottomOf="@+id/textView1c" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="32dp"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner1c" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/dateText1c"/>
    </android.support.constraint.ConstraintLayout>
    <ImageView
            android:onClick="cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/cancel"
            android:id="@+id/imageCancel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:onClick="confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/confirm"
            android:id="@+id/imageConfirm" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newEventText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageCancel"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/imageConfirm"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>